--- a/test/de/invitation.html
+++ b/test/de/invitation.html
@@ -3,5 +3,8 @@
 </head><body>
 <p>$GREET</p>
 
-<p>Test test test!</p>
+<p>Es findet eine Urabstimmung statt. Siehe Stimmaterial im Anhang.</p>
+
+<p>Gruss<br/>
+Stefan</p>
 </body></html>
