--- a/2018-01-17/de/invitation.html
+++ b/2018-01-17/de/invitation.html
@@ -212,7 +212,7 @@ TkSuQmCC">
 <br/>
 <p>$GREET</p>
 
-<p>Anbei erhältst Du das Stimmmaterial für die Urabstimmung von 17. Januar 2018, über die wir im Vorfeld bereits über das Publikationsorgan sowie per E-Mail ausgiebig informiert hatten. Du findest dein Stimmmaterial im Anhang als PDF.</p>
+<p>Anbei erhältst Du das Stimmmaterial für die Urabstimmung vom 17. Januar 2018, über die wir im Vorfeld bereits über das Publikationsorgan sowie per E-Mail ausgiebig informiert hatten. Du findest dein Stimmmaterial im Anhang als PDF.</p>
 
 <p>Um an der Wahl teilzunehmen, musst Du dieses ausdrucken und den Instruktionen auf dem Stimmmaterial folgen. Beachte bitte, dass wir nur bis zum 17.01.2018 retournierte (Datum des Poststempels) Abstimmungsunterlagen zur Abstimmung zulassen können.</p>
 
