Next votation at 2018-08-17

--- a/2018-08-17/de/invitation.html
+++ b/2018-08-17/de/invitation.html
@@ -212,9 +212,9 @@ TkSuQmCC">
 <br/>
 <p>$GREET</p>
 
-<p>Anbei erhältst Du das Stimmmaterial für die Urabstimmung vom 13. August 2018, über die wir im Vorfeld bereits über das Publikationsorgan sowie per E-Mail ausgiebig informiert hatten. Du findest dein Stimmmaterial im Anhang als PDF.</p>
+<p>Anbei erhältst Du das Stimmmaterial für die Urabstimmung vom 17. August 2018, über die wir im Vorfeld bereits über das Publikationsorgan sowie per E-Mail ausgiebig informiert hatten. Du findest dein Stimmmaterial im Anhang als PDF.</p>
 
-<p>Um an der Wahl teilzunehmen, musst Du dieses ausdrucken und den Instruktionen auf dem Stimmmaterial folgen. Beachte bitte, dass wir nur bis zum 13.08.2018 retournierte (Datum des Poststempels) Abstimmungsunterlagen zur Abstimmung zulassen können.</p>
+<p>Um an der Wahl teilzunehmen, musst Du dieses ausdrucken und den Instruktionen auf dem Stimmmaterial folgen. Beachte bitte, dass wir nur bis zum 17. August 2018 retournierte (Datum des Poststempels) Abstimmungsunterlagen zur Abstimmung zulassen können.</p>
 
 <p>Mit freundlichen Grüssen<br/>
 Daniel, Alex, Moira</p>
