--- a/2018-08-17/en/invitation.html
+++ b/2018-08-17/en/invitation.html
@@ -4,7 +4,7 @@
 <table width="100%">
 			<tr>
 				<td>
-					<font face="Arial" size="6"><b>Votation de Base</b></font>
+					<font face="Arial" size="6"><b>Urabstimmung</b></font>
 				</td>
 				<td align="right">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img height="100px" src="data:image/jpeg;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAABNCAYAAAAcolk+AAAABHNCSVQICAgIfAhkiAAAAAlw
@@ -212,26 +212,27 @@ TkSuQmCC">
 <br/>
 <p>$GREET</p>
 
-<p>La votation de base du 17 janvier 2018 a été annoncée statutairement par publication dans l'organe de publication ainsi que par E-mail.</p>
+<p>Anbei erhältst Du das Stimmmaterial für die Urabstimmung vom 17. August 2018, über die wir im Vorfeld bereits über das Publikationsorgan sowie per E-Mail ausgiebig informiert hatten. Du findest dein Stimmmaterial im Anhang als PDF.</p>
 
-<p>Vous trouverez le matériel de vote en annexe, en format PDF. Pour participer à la votation il vous faut imprimer le matériel de vote et suivre scrupuleusement les instructions qui y figurent.</p>
+<p>Um an der Wahl teilzunehmen, musst Du dieses ausdrucken und den Instruktionen auf dem Stimmmaterial folgen. Beachte bitte, dass wir nur bis zum 17. August 2018 retournierte (Datum des Poststempels) Abstimmungsunterlagen zur Abstimmung zulassen können.</p>
 
-<p>Nous attirons votre attention sur le fait que pour être pris en considération le bulletin de vote devra être expédié au plus tard le 17 janvier 2018, le timbre de la poste faisant foi.</p>
-
-<p>Cordiales salutations,<br/>
+<p>Mit freundlichen Grüssen<br/>
 Daniel, Alex, Moira</p>
 
-<p>Présidence de l'Assenblé Pirate<br/>
-Parti Pirate Suisse<br/>
-CH-3000 Berne</p>
+<p>Präsidium der Piratenversammlung<br/>
+Piratenpartei Schweiz<br/>
+CH-3000 Bern</p>
 
-<p>contact: <a href="mailto:ppv@partipirate.ch">ppv@partipirate.ch</a></p>
+<p>Kontakt: <a href="mailto:ppv@piratenpartei.ch">ppv@piratenpartei.ch</a></p>
 
-<p>Président: Daniel Ceszkowski, FR, <a href="mailto:daniel.ceszkowski@partipirate.ch">daniel.ceszkowski@partipirate.ch</a><br/>
-Vice-président: Alexander Brehm, DE, <a href="mailto:alexander.brehm@piratenpartei.ch">alexander.brehm@piratenpartei.ch</a><br/>
-Vice-président: Moira Brülisauer, DE, <a href="mailto:moira.bruelisauer@piratenpartei.ch">moira.bruelisauer@piratenpartei.ch</a></p>
+<p>Präsident: Daniel Ceszkowski, FR, <a href="mailto:daniel.ceszkowski@partipirate.ch">daniel.ceszkowski@partipirate.ch</a><br>
+Vizepräsident: Alexander Brehm, DE, <a href="mailto:alexander.brehm@piratenpartei.ch<">alexander.brehm@piratenpartei.ch</a><br>
+Vizepräsident: Moira Brülisauer, DE, <a href="mailto:moira.bruelisauer@piratenpartei.ch">moira.bruelisauer@piratenpartei.ch</a></p>
 
-<p>Vous avez reçu ce message en tant que membre du Parti Pirate Suisse. Ceci est unenotification officielle ou une invitation. Pour en savoir plus sur l'Assemblée Pirate vous trouvez des information complémentaire dans le <a href="https://projects.piratenpartei.ch/projects/agenda">Redmine</a>.
+<p>Du erhältst diese Nachricht als Mitglied der Piratenpartei Schweiz. Dies ist eine offizielle Benachrichtigung oder Einladung.</p>
 
-<p>Si vous ne souhaitez plus de recevoir des invitations officielles, s'il vous plaît contactez nous par e-mail sous: <a href="mailto:ppv@piratenpartei.ch">ppv@piratenpartei.ch</a></p>
+<p>Weitere Informationen über die Piratenversammlung findest du im <a href="https://projects.piratenpartei.ch/projects/agenda">Redmine</a>.</p>
+
+Wenn du offizielle Einladungen nicht mehr erhalten möchtest, wende dich bitte per Email an <a href="ppv@piratenpartei.ch">ppv@piratenpartei.ch</a>
+
 </body></html>
